--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -36,7 +36,7 @@ $toggle-btn-color: #fff !default;
 $toggle-btn-bg: darken($base-bg, 5%) !default;
 
 $item-font-size: 16px !default;
-$item-line-height: 30px !default;
+$item-line-height: 35px !default;
 $item-padding: 10px 15px !default;
 $icon-height: 35px !default;
 $icon-width: 35px !default;
